nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: sample-nodejs
 labels:
   app: sample-nodejs
spec:
 selector:
  matchLabels:
   app: sample-nodejs
 template:
  metadata:
   labels:
    app: sample-nodejs
  spec:
   containers:
   - image: 126124269786.dkr.ecr.us-east-1.amazonaws.com/hello-world-app:latest
     name: nodejs-api
     imagePullPolicy: Always
     ports:
       - containerPort: 3000
