nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodejs-svc
spec:
  selector:
    app: sample-nodejs
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
      nodePort: 30253
      protocol: TCP
  type: LoadBalancer
