nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: bala2024example.com
      http:
        paths:
        - path: /*
          pathType: Prefix
          backend:
            service:
              name: sample-nodejs-service
              port:
                number: 80
